fix(Layout): add missing color transitions

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -10,12 +10,14 @@
     grid-template-rows: auto 1fr auto;
 
     background-color: themed('background-color');
+    transition: all 0.2s ease-in-out 0s;
 
     &__header {
       grid-area: header;
       z-index: 1000;
 
       background-color: themed('background-color');
+      transition: all 0.2s ease-in-out 0s;
     }
 
     &__nav {
@@ -39,6 +41,7 @@
 
       width: 100%;
       background-color: themed('background-color');
+      transition: all 0.2s ease-in-out 0s;
     }
   }
 }
